# energyops-simulator

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.yml  pytest.ini
backend/: Dockerfile  README.md  STATUS.md  alembic.ini  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  db.py  deps.py  main.py  models.py  schemas.py  security.py  seed.py
backend/app/routes/: alarms.py  audit.py  auth.py  health.py  hierarchy.py  reports.py  telemetry.py  ws.py
backend/app/services/: alarm_engine.py  audit.py  mqtt_consumer.py  report_service.py  ws_hub.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py
backend/scripts/: __init__.py  reset_db.py  seed.py
backend/tests/: __init__.py  conftest.py  test_alarms.py  test_auth.py  test_hierarchy.py  test_mqtt_lifespan.py  test_reports.py  test_smoke_app.py
backend/tests/db/: __init__.py  test_smoke.py
demo/: README.md  record.md  reset.ps1  reset.sh  up.ps1  up.sh
docs/: AGENT_WORKFLOW.md  API_CONTRACT.md  ARCHITECTURE.md  CONTRACT_CHANGES.md  DATA_MODEL.md  DEMO_SCRIPT.md
docs/adr/: 0001-mqtt-topic-contract.md
frontend/: .dockerignore  .env.example  Dockerfile  README.md  STATUS.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
frontend/__tests__/: badges.test.tsx  format.test.ts  permissions.test.ts
frontend/app/: globals.css  layout.tsx
frontend/lib/: api.ts  (+7 more)
reports/: .gitkeep
simulator/: Dockerfile  README.md  STATUS.md  __init__.py  assets.py  config.py  main.py
tests/: __init__.py
(+33 files in other folders)
