[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "energyops-backend"
version = "0.1.0"
description = "FastAPI backend for the Industrial EnergyOps Dashboard"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
